108: renamed exec-maven-plugin phase
Task-Url: https://github.com/LorenzoBettini/jbase/issues/108

--- a/jbase/pom.xml
+++ b/jbase/pom.xml
@@ -50,7 +50,7 @@
             </configuration>
           </execution>
           <execution>
-            <id>mwe2Launcher</id>
+            <id>generateLanguage</id>
             <phase>generate-sources</phase>
             <goals>
               <goal>java</goal>
