108: added common configuration for exec plugin
Task-Url: https://github.com/LorenzoBettini/jbase/issues/108

--- a/jbase/pom.xml
+++ b/jbase/pom.xml
@@ -65,6 +65,11 @@
             </configuration>
           </execution>
         </executions>
+        <configuration>
+          <classpathScope>compile</classpathScope>
+          <includePluginDependencies>true</includePluginDependencies>
+          <cleanupDaemonThreads>false</cleanupDaemonThreads>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.eclipse.xtend</groupId>
