108: adapted jbase.ui.tests
Task-Url: https://github.com/LorenzoBettini/jbase/issues/108

--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -362,6 +362,7 @@
             <jgit.ignore>
               pom.xml
               .polyglot.build.properties
+              ui-tests.txt
             </jgit.ignore>
             <format>'v'yyyyMMdd'-'HHmm</format>
           </configuration>
