--- a/jbase.ui.tests/pom.xml
+++ b/jbase.ui.tests/pom.xml
@@ -57,6 +57,10 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.eclipse.xtend</groupId>
+        <artifactId>xtend-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>target-platform-configuration</artifactId>
         <configuration>
