--- a/jbase/pom.xml
+++ b/jbase/pom.xml
@@ -16,6 +16,8 @@
 
   <properties>
     <sonar.skip>false</sonar.skip>
+    <!-- Otherwise Sonar will scan xtend-gen both as source and as test -->
+    <sonar.tests></sonar.tests>
   </properties>
 
   <dependencies>
