108: restored a few jacoco exclusions
Task-Url: https://github.com/LorenzoBettini/jbase/issues/108

--- a/jbase.tests.report/pom.xml
+++ b/jbase.tests.report/pom.xml
@@ -30,7 +30,9 @@
                 <exclude>**/org/eclipse/**/*.class</exclude>
                 <exclude>**/jbase/jbase/util/*</exclude>
                 <exclude>**/jbase/jbase/impl/*</exclude>
+                <exclude>**/*RuntimeModule*</exclude>
                 <exclude>**/*XbasePatchedFormatter*</exclude>
+                <exclude>**/ui/editor/*</exclude>
               </excludes>
             </configuration>
             <executions>
