108: restored other jacoco exclusions
Task-Url: https://github.com/LorenzoBettini/jbase/issues/108

--- a/jbase.tests.report/pom.xml
+++ b/jbase.tests.report/pom.xml
@@ -33,6 +33,9 @@
                 <exclude>**/*RuntimeModule*</exclude>
                 <exclude>**/*XbasePatchedFormatter*</exclude>
                 <exclude>**/ui/editor/*</exclude>
+                <exclude>**/*UiModule.class</exclude>
+                <exclude>**/*LabelProvider*</exclude>
+                <exclude>**/*TreeProvider*</exclude>
               </excludes>
             </configuration>
             <executions>
