108: simplified tests.parent
Task-Url: https://github.com/LorenzoBettini/jbase/issues/108

--- a/jbase.tests.parent/pom.xml
+++ b/jbase.tests.parent/pom.xml
@@ -23,14 +23,11 @@
 
   <profiles>
     <profile>
+      <!-- We enable jacoco-maven-plugin, already configured in the xtext-build-utils parent -->
       <id>jacoco</id>
-      <properties>
-        <additionalTestArgLine>${tycho.testArgLine} ${moduleProperties}</additionalTestArgLine>
-      </properties>
       <build>
         <plugins>
           <plugin>
-            <!-- configured in <pluginManagement> -->
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
           </plugin>
