108: use eclipse-version in .site
Task-Url: https://github.com/LorenzoBettini/jbase/issues/108

--- a/jbase.site/pom.xml
+++ b/jbase.site/pom.xml
@@ -17,12 +17,8 @@
 
   <profiles>
     <profile>
-      <!-- Activate this profile to perform the release to Bintray -->
+      <!-- Activate this profile to perform the release -->
       <id>release-composite</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-
       <build>
         <plugins>
           <plugin>
@@ -30,7 +26,6 @@
             <artifactId>tycho-p2-repository-plugin</artifactId>
             <version>${tycho-version}</version>
             <configuration>
-              <includeAllDependencies>${includeAllDependencies}</includeAllDependencies>
               <finalName>${project.artifactId}-${qualifiedVersion}</finalName>
             </configuration>
           </plugin>
@@ -163,9 +158,9 @@
               </applicationsArgs>
               <repositories>
                 <repository>
-                  <id>oxygen</id>
+                  <id>${eclipse-version}</id>
                   <layout>p2</layout>
-                  <url>http://download.eclipse.org/releases/oxygen</url>
+                  <url>https://download.eclipse.org/releases/${eclipse-version}</url>
                 </repository>
               </repositories>
               <dependencies>
@@ -190,7 +185,15 @@
                   <type>eclipse-feature</type>
                 </dependency>
                 <dependency>
+                  <artifactId>org.eclipse.osgi.compatibility.state</artifactId>
+                  <type>eclipse-plugin</type>
+                </dependency>
+                <dependency>
                   <artifactId>org.eclipse.equinox.ds</artifactId>
+                  <type>eclipse-plugin</type>
+                </dependency>
+                <dependency>
+                  <artifactId>org.eclipse.core.net</artifactId>
                   <type>eclipse-plugin</type>
                 </dependency>
               </dependencies>
