--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -62,7 +62,7 @@
     <!-- For tests for Java 9 and above -->
     <moduleProperties></moduleProperties>
 
-    <eclipse-target>2021-03</eclipse-target>
+    <eclipse-version>2021-03</eclipse-version>
     <target-file-name>jbase.target</target-file-name>
 
     <!-- <jacoco.reportPath>../target/jacoco.exec</jacoco.reportPath> -->
@@ -196,9 +196,6 @@
     <current-release-directory>${releases-directory}/${qualifiedVersion}</current-release-directory>
     <!-- The label for the Composite sites -->
     <site.label>Jbase Site</site.label>
-
-    <!-- set it to true to have a self contained p2 repository https://wiki.eclipse.org/Tycho/eclipse-repository#Creating_a_self-contained_p2_repository -->
-    <includeAllDependencies>false</includeAllDependencies>
   </properties>
 
   <dependencyManagement>
