108: xtend-gen folder with .gitignore
Task-Url: https://github.com/LorenzoBettini/jbase/issues/108

--- a/domainmodel/org.eclipse.xtext.example.domainmodel/pom.xml
+++ b/domainmodel/org.eclipse.xtext.example.domainmodel/pom.xml
@@ -32,6 +32,7 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Explicitly call xtend-maven-plugin after mwe2 -->
       <plugin>
         <groupId>org.eclipse.xtend</groupId>
         <artifactId>xtend-maven-plugin</artifactId>
