--- a/jbase/pom.xml
+++ b/jbase/pom.xml
@@ -73,6 +73,7 @@
           <cleanupDaemonThreads>false</cleanupDaemonThreads>
         </configuration>
       </plugin>
+      <!-- Explicitly call xtend-maven-plugin after mwe2 -->
       <plugin>
         <groupId>org.eclipse.xtend</groupId>
         <artifactId>xtend-maven-plugin</artifactId>
