--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -57,7 +57,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <os-jvm-flags />
     <memoryArgs>-Xms256M -Xmx1024M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
+    <xtextVersion>2.26.0-SNAPSHOT</xtextVersion>
     <xtext-version>${xtextVersion}</xtext-version>
+    <mwe2Version>2.12.2-SNAPSHOT</mwe2Version>
 
     <!-- For tests for Java 9 and above -->
     <moduleProperties></moduleProperties>
@@ -403,5 +405,118 @@
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
+
+  <repositories>
+    <repository>
+      <id>xtext-lib-repository</id>
+      <name>xtext-lib-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-lib/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+    </repository>
+    <repository>
+      <id>xtext-core-repository</id>
+      <name>xtext-core-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-core/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+    </repository>
+    <repository>
+      <id>xtext-extras-repository</id>
+      <name>xtext-extras-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-extras/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+    </repository>
+    <repository>
+      <id>xtext-maven-repository</id>
+      <name>xtext-maven-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-maven/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+    </repository>
+    <repository>
+      <id>xtext-xtend-repository</id>
+      <name>xtext-xtend-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-xtend/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+    </repository>
+    <repository>
+      <id>xtext-web-repository</id>
+      <name>xtext-web-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-web/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+    </repository>
+    <repository>
+      <id>xtext-mwe-repository</id>
+      <name>xtext-mwe-repository</name>
+      <url>https://ci.eclipse.org/mwe/job/mwe2/job/cd_mweGuice5Experimentb/lastSuccessfulBuild/artifact/git-repo/my-local-snapshots-dir/</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>xtext-lib-plugin-repository</id>
+      <name>xtext-lib-plugin-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-lib/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>xtext-core-plugin-repository</id>
+      <name>xtext-core-plugin-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-core/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>xtext-extras-plugin-repository</id>
+      <name>xtext-extras-plugin-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-extras/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <name>xtext-maven-plugin-repository</name>
+      <id>xtext-maven-plugin-repository</id>
+      <url>https://ci.eclipse.org/xtext/job/xtext-maven/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <name>xtext-xtend-plugin-repository</name>
+      <id>xtext-xtend-plugin-repository</id>
+      <url>https://ci.eclipse.org/xtext/job/xtext-xtend/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>xtext-web-plugin-repository</id>
+      <name>xtext-web-plugin-repository</name>
+      <url>https://ci.eclipse.org/xtext/job/xtext-web/job/cd_guice501/lastSuccessfulBuild/artifact/build/maven-repository/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>xtext-mwe-plugin-repository</id>
+      <name>xtext-mwe-plugin-repository</name>
+      <url>https://ci.eclipse.org/mwe/job/mwe2/job/cd_mweGuice5Experimentb/lastSuccessfulBuild/artifact/git-repo/my-local-snapshots-dir/</url>
+      <releases><enabled>false</enabled></releases>
+      <snapshots><enabled>true</enabled></snapshots>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
