114: archive test results in workflow
Task-Url: https://github.com/LorenzoBettini/jbase/issues/114

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,4 +48,10 @@ jobs:
         -Dsonar.organization=lorenzobettini-github
         -Dsonar.host.url=https://sonarcloud.io
         $ADDITIONAL_GOALS
+    - name: Archive Test Results
+      uses: actions/upload-artifact@v2
+      if: ${{ failure() || cancelled() }}
+      with:
+        name: test-results-${{ runner.os }}
+        path: '**/*.tests/target'
 
