114: archive also client maven
Task-Url: https://github.com/LorenzoBettini/jbase/issues/114

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,4 +54,10 @@ jobs:
       with:
         name: test-results-${{ runner.os }}
         path: '**/*.tests/target'
+    - name: Archive Client Maven
+      uses: actions/upload-artifact@v2
+      if: ${{ failure() || cancelled() }}
+      with:
+        name: client-maven-${{ runner.os }}
+        path: '**/jbase.example.client.maven'
 
