use property skipMWE2

--- a/jbase/pom.xml
+++ b/jbase/pom.xml
@@ -71,6 +71,7 @@
           <classpathScope>compile</classpathScope>
           <includePluginDependencies>true</includePluginDependencies>
           <cleanupDaemonThreads>false</cleanupDaemonThreads>
+          <skip>${skipMWE2}</skip>
         </configuration>
       </plugin>
       <!-- Explicitly call xtend-maven-plugin after mwe2 -->
