--- a/jbase.example.jbasescript.example.project/pom.xml
+++ b/jbase.example.jbasescript.example.project/pom.xml
@@ -46,6 +46,26 @@
         </configuration>
         <dependencies>
           <dependency>
+            <groupId>org.eclipse.jdt</groupId>
+            <artifactId>org.eclipse.jdt.core</artifactId>
+            <version>3.26.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.jdt</groupId>
+            <artifactId>org.eclipse.jdt.compiler.apt</artifactId>
+            <version>1.3.1300</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.platform</groupId>
+            <artifactId>org.eclipse.core.runtime</artifactId>
+            <version>3.22.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.platform</groupId>
+            <artifactId>org.eclipse.equinox.common</artifactId>
+            <version>3.15.0</version>
+          </dependency>
+          <dependency>
             <groupId>net.sf.xtext-jbase</groupId>
             <artifactId>jbase.example.jbasescript</artifactId>
             <version>${project.version}</version>
