--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -384,6 +384,13 @@
                 <id>org.eclipse.xtext.ui.codemining</id>
                 <versionRange>0.0.0</versionRange>
               </requirement>
+              <!-- to force the same version of jdt.compiler.apt and jdt.core
+                (for xtext-maven-plugin) -->
+              <requirement>
+                <type>eclipse-plugin</type>
+                <id>org.eclipse.jdt.compiler.apt</id>
+                <versionRange>0.0.0</versionRange>
+              </requirement>
             </extraRequirements>
           </dependency-resolution>
         </configuration>
