118: renamed example project
Task-Url: https://github.com/LorenzoBettini/jbase/issues/118

--- a/jbase.example.project/.project
+++ b/jbase.example.project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jbase.example.jbasescript.example.project</name>
+	<name>jbase.example.project</name>
 	<comment></comment>
 	<projects>
 	</projects>
