--- a/jbase.testlanguage/build.properties
+++ b/jbase.testlanguage/build.properties
@@ -7,10 +7,12 @@ bin.includes = model/generated/,\
                .,\
                plugin.xml
 additional.bundles = org.eclipse.xtext.xbase,\
-                     org.eclipse.xtext.generator,\
-                     org.apache.commons.logging,\
+                     org.eclipse.xtext.common.types,\
+                     org.eclipse.xtext.xtext.generator,\
                      org.eclipse.emf.codegen.ecore,\
                      org.eclipse.emf.mwe.utils,\
                      org.eclipse.emf.mwe2.launch,\
-                     org.eclipse.xtext.common.types,\
-                     org.objectweb.asm
+                     org.eclipse.emf.mwe2.lib,\
+                     org.objectweb.asm,\
+                     org.apache.commons.logging,\
+                     jbase.mwe2
