--- a/domainmodel/org.eclipse.xtext.example.domainmodel/build.properties
+++ b/domainmodel/org.eclipse.xtext.example.domainmodel/build.properties
@@ -8,10 +8,13 @@ bin.includes = model/generated/,\
                plugin.xml,\
                about.html
 additional.bundles = org.eclipse.xtext.xbase,\
-                     org.eclipse.xtext.generator,\
-                     org.apache.commons.logging,\
+                     org.eclipse.xtext.common.types,\
+                     org.eclipse.xtext.xtext.generator,\
                      org.eclipse.emf.codegen.ecore,\
                      org.eclipse.emf.mwe.utils,\
                      org.eclipse.emf.mwe2.launch,\
-                     org.eclipse.xtext.common.types,\
-                     org.objectweb.asm
+                     org.eclipse.emf.mwe2.lib,\
+                     org.objectweb.asm,\
+                     org.apache.commons.logging,\
+                     org.apache.log4j,\
+                     jbase.mwe2
