--- a/domainmodel/org.eclipse.xtext.example.domainmodel/build.properties
+++ b/domainmodel/org.eclipse.xtext.example.domainmodel/build.properties
@@ -17,4 +17,6 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      org.objectweb.asm,\
                      org.apache.commons.logging,\
                      org.apache.log4j,\
+                     com.ibm.icu,\
+                     de.itemis.xtext.antlr,\
                      jbase.mwe2
