--- a/jbase/build.properties
+++ b/jbase/build.properties
@@ -17,4 +17,6 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.emf.mwe2.lib,\
                      org.objectweb.asm,\
                      org.apache.commons.logging,\
-                     org.apache.log4j
+                     org.apache.log4j,\
+                     com.ibm.icu,\
+                     de.itemis.xtext.antlr
