--- a/jbase.doc/pom.xml
+++ b/jbase.doc/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<relativePath>../jbase.parent/pom.xml</relativePath>
-		<groupId>net.sf.xtext-jbase</groupId>
+		<groupId>io.github.lorenzobettini.jbase</groupId>
 		<artifactId>jbase.parent</artifactId>
 		<version>0.12.2-SNAPSHOT</version>
 	</parent>
