--- a/jbase.example.client.maven/pom.xml
+++ b/jbase.example.client.maven/pom.xml
@@ -2,7 +2,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.sf.xtext-jbase</groupId>
+  <groupId>io.github.lorenzobettini.jbase</groupId>
   <artifactId>jbase.example.client.maven</artifactId>
   <version>0.12.2-SNAPSHOT</version>
 
@@ -133,12 +133,12 @@
         </configuration>
         <dependencies>
           <dependency>
-            <groupId>net.sf.xtext-jbase</groupId>
+            <groupId>io.github.lorenzobettini.jbase</groupId>
             <artifactId>jbase.example.jbasescript</artifactId>
             <version>${project.version}</version>
           </dependency>
           <dependency>
-            <groupId>net.sf.xtext-jbase</groupId>
+            <groupId>io.github.lorenzobettini.jbase</groupId>
             <artifactId>jbase</artifactId>
             <version>${project.version}</version>
           </dependency>
