--- a/jbase.targetplatform/pom.xml
+++ b/jbase.targetplatform/pom.xml
@@ -7,7 +7,7 @@
 
   <parent>
     <relativePath>../jbase.parent/pom.xml</relativePath>
-    <groupId>net.sf.xtext-jbase</groupId>
+    <groupId>io.github.lorenzobettini.jbase</groupId>
     <artifactId>jbase.parent</artifactId>
     <version>0.12.2-SNAPSHOT</version>
   </parent>
