135: document groupId change
Task-Url: https://github.com/LorenzoBettini/jbase/issues/135

--- a/jbase.parent/.project
+++ b/jbase.parent/.project
@@ -14,5 +14,10 @@
 			<type>2</type>
 			<locationURI>PARENT-1-PROJECT_LOC/.github</locationURI>
 		</link>
+		<link>
+			<name>README.md</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/README.md</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
