--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Build with Maven
       run: >
         xvfb-run
-        mvn -f jbase.releng/pom.xml
+        ./mvnw -f jbase.releng/pom.xml
         clean verify -Pjacoco
         -DrepoToken=$COVERALLS_REPO_TOKEN
         -DpullRequest=${{ github.event.pull_request.number }}
