--- a/jbase.parent/.project
+++ b/jbase.parent/.project
@@ -19,5 +19,10 @@
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/README.md</locationURI>
 		</link>
+		<link>
+			<name>Jenkinsfile</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Jenkinsfile</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
